--- a/contato.html
+++ b/contato.html
@@ -32,8 +32,9 @@
 				<input type="number" name="numero">
 				<p>mensagem</p>
 				<input type="text" name="mensagem">
+				<textarea name="Mensagem" wrap="virtual"></textarea>
 				<p>enviar</p>
-				<input type="bot" name="">
+				<input type="button" name="enviar">
 			</section>
 			
 		</main>
