atualização css e htmls

--- a/contato.html
+++ b/contato.html
@@ -4,16 +4,16 @@
 		<meta charset="utf-8">
 		<title>contato</title>
 		<link rel="stylesheet" href="style.css">
-		<!-- <link rel="icon" type="image/png" href=""> -->
+		<link rel="icon" type="image/png" href="assets/vainaweb.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body class="body-1">
 		<header class="header-1">
-			<img class="img-1" src="assets/Ft-CpxLogo.png">
-			<nav class="nav-1">
-				<a class="nav-item" href="home.html">Home</a>
-				<a class="nav-item" href="galeria.html">Galeria de Fotos</a>
-				<a class="nav-item" href="contato.html">Contatos</a>
+			<img class="header-logo" src="assets/Ft-CpxLogo.png">
+			<nav class="menu">
+				<a class="menu-item" href="index.html">Home</a>
+				<a class="menu-item" href="galeria.html">Galeria de Fotos</a>
+				<a class="menu-item" href="contato.html">Contatos</a>
 			</nav>
 		</header>
 		<main class="containerContato">
@@ -36,7 +36,6 @@
 				<p>enviar</p>
 				<input type="button" name="enviar">
 			</section>
-			
 		</main>
 		<footer class="rodape">
 			<h1 class="titulo-1">Somos um grupo de fotógrafos do Complexo do Alemão apaixonados por fotos</h1>
@@ -44,7 +43,9 @@
 				
 				</div>
 				<div class="container-final">
-				<p class="p-1"> Powered by <span class="span-2">Renan Carvalho</span> on <span class="span-2">Vai Na Web</span>. </p>
+				<p class="powered-1">
+					Powered by <span class="span-2">Guilherme Carvalho</span> and <span class="span-2">Rennan Carvalho</span> on <span class=" span-2">Vai Na Web</span>.
+				</p>
 				</div>
 		</footer>
 	</body>
