--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8">
-		<title>Galeria de Fotos</title>
+		<title></title>
 		<link rel="stylesheet" href="style.css">
 		<link rel="icon" type="image/png" href="assets/vainaweb.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,16 +18,28 @@
 		</header>
 		<main>
 			<section class="centro">
-				<h2>Confira mais alguns cliques da nossa equipe.</h2>
-				<div class="centro-fotos">
-					
+				<div class="quadrado">
+					<a class="mais-fotos" href="">mais fotos <span class="span-reticencias">[...]</span></a>
 				</div>
+				<h2 class="titulo-fotografias">Fotografias</h2>
+				<img class="imagem-maior" src="fotos/foto04.jpg">
+				<div class="imagens-juntas">
+					<img class="imagens-item1" src="fotos/foto01.jpg">
+					<img class="imagens-item2" src="fotos/foto03.jpg">
+				</div>	
+				<a class="mais-fotos2" href="">Mais fotos <span>[...]</span></a>
 			</section>
 		</main>
 		<footer class="rodape">
-				<p class="powered-2">
+			<h1 class="titulo-1">Somos um grupo de fotógrafos do Complexo do Alemão apaixonados por fotos</h1>
+			<div>
+				
+			</div>
+			<div class="container-final">
+				<p class="powered-1">
 					Powered by <span class="span-2">Guilherme Carvalho</span> and <span class="span-2">Rennan Carvalho</span> on <span class=" span-2">Vai Na Web</span>.
 			    </p>
+			</div>
 		</footer>
 	</body>
 </html>
