atualização do rodapé

--- a/index.html
+++ b/index.html
@@ -32,8 +32,15 @@
 		</main>
 		<footer class="rodape">
 			<h1 class="titulo-1">Somos um grupo de fotógrafos do Complexo do Alemão apaixonados por fotos</h1>
-			<div>
-				
+			<div class="redes-sociais">
+				<a class="redes-icon" href=""><img class="redes-img" src="assets/facebook.png"></a>
+				<a class="redes-icon" href=""><img class="redes-img" src="assets/twitter.png"></a>
+				<a class="redes-icon" href=""><img class="redes-img" src="assets/instagran.png"></a>
+				<a class="redes-icon" href=""><img class="redes-img" src="assets/pinterest.png"></a>
+				<a class="redes-icon" href=""><img class="redes-img" src="assets/facebook.png"></a>
+				<a class="redes-icon" href=""><img class="redes-img" src="assets/twitter.png"></a>
+				<a class="redes-icon" href=""><img class="redes-img" src="assets/instagran.png"></a>
+				<a class="redes-icon" href=""><img class="redes-img" src="assets/pinterest.png"></a>
 			</div>
 			<div class="container-final">
 				<p class="powered-1">
