--- a/contato.html
+++ b/contato.html
@@ -37,16 +37,10 @@
 				<input type="button" name="enviar">
 			</section>
 		</main>
-		<footer class="rodape">
-			<h1 class="titulo-1">Somos um grupo de fotógrafos do Complexo do Alemão apaixonados por fotos</h1>
-				<div>
-				
-				</div>
-				<div class="container-final">
-				<p class="powered-1">
-					Powered by <span class="span-2">Guilherme Carvalho</span> and <span class="span-2">Rennan Carvalho</span> on <span class=" span-2">Vai Na Web</span>.
+		<footer class="rodape-1">
+				<p class="powered-2">
+					Powered by <span class="span-3">Guilherme Carvalho</span> and <span class="span-3">Rennan Carvalho</span> on <span class=" span-3">Vai Na Web</span>.
 				</p>
-				</div>
 		</footer>
 	</body>
 </html>
