--- a/galeria.html
+++ b/galeria.html
@@ -24,9 +24,9 @@
 				</div>
 			</section>
 		</main>
-		<footer class="rodape">
+		<footer class="rodape-1">
 				<p class="powered-2">
-					Powered by <span class="span-2">Guilherme Carvalho</span> and <span class="span-2">Rennan Carvalho</span> on <span class=" span-2">Vai Na Web</span>.
+					Powered by <span class="span-3">Guilherme Carvalho</span> and <span class="span-3">Rennan Carvalho</span> on <span class=" span-3">Vai Na Web</span>.
 			    </p>
 		</footer>
 	</body>
