atualização html e css

--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body class="body-1">
-		<header class="header-1">
+		<header class="header-1 header-2">
 			<img class="header-logo" src="assets/Ft-CpxLogo.png">
 			<nav class="menu">
 				<a class="menu-item" href="index.html">Home</a>
@@ -17,30 +17,34 @@
 			</nav>
 		</header>
 		<main class="containerContato">
-			<section class="main_contact_endereco">
-				<p>Rua Canitar, 35</p>
-				<p>Inhaúma - Rio de Janeiro/RJ</p>
-				<p>(21)9.9999-9999</p>
-				<p>facebook.com/Ft-Cpx</p>
+			<section class="mainContato-item">
+				<p class="form-titulo1">Rua Canitar, 35</p>
+				<p class="form-titulo1">Inhaúma - Rio de Janeiro/RJ</p>
+				<p class="form-titulo1">(21)9.9999-9999</p>
+				<p class="form-titulo1">facebook.com/Ft-Cpx</p>
 			</section>
-			<section class="main_contact_formulario">
-				<p>nome</p>
-				<input type="text" name="nome">
-				<p>e-mail:</p>
-				<input type="email" name="email">
-				<p>telefone</p>
-				<input type="number" name="numero">
-				<p>mensagem</p>
-				<input type="text" name="mensagem">
-				<textarea name="Mensagem" wrap="virtual"></textarea>
-				<p>enviar</p>
-				<input type="button" name="enviar">
+			<section class="mainContato-item ">
+				<p class="form-titulo2">nome</p>
+				<input class="form-input" type="text" name="nome">
+				<p class="form-titulo2">e-mail:</p>
+				<input class="form-input" type="email" name="email">
+				<p class="form-input" class="form-titulo">telefone</p>
+				<input class="form-input" type="number" name="numero">
+				<p class="form-titulo2">mensagem</p>
+				<!-- <input type="text" name="mensagem"> -->
+				<textarea class="form-input form-text" name="Mensagem" wrap="virtual"></textarea>
+				<!-- <p>enviar</p>
+				<input type="button" name="enviar"> -->
+				<button>enviar</button>
 			</section>
 		</main>
 		<footer class="rodape-1">
 				<p class="powered-2">
 					Powered by <span class="span-3">Guilherme Carvalho</span> and <span class="span-3">Rennan Carvalho</span> on <span class=" span-3">Vai Na Web</span>.
-				</p>
+			    </p>
+			    <div>
+			    	
+			    </div>
 		</footer>
 	</body>
 </html>
