--- a/galeria.html
+++ b/galeria.html
@@ -28,6 +28,9 @@
 				<p class="powered-2">
 					Powered by <span class="span-3">Guilherme Carvalho</span> and <span class="span-3">Rennan Carvalho</span> on <span class=" span-3">Vai Na Web</span>.
 			    </p>
+			    <div>
+			    	
+			    </div>
 		</footer>
 	</body>
 </html>
