--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 				<a class="redes-icon" href=""><img class="redes-img" src="assets/instagran.png"></a>
 				<a class="redes-icon" href=""><img class="redes-img" src="assets/pinterest.png"></a>
 			</div>
+			<div>
+				
+			</div>
 			<div class="container-final">
 				<p class="powered-1">
 					Powered by <span class="span-2">Guilherme Carvalho</span> and <span class="span-2">Rennan Carvalho</span> on <span class=" span-2">Vai Na Web</span>.
